Archive2/d2/48c5c2a47d1c35/output
main.cpp:6:3: error: no viable conversion from 'E' to 'X'
X x = e;
  ^   ~
main.cpp:4:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'E' to 'const X &' for 1st argument
struct X { };
       ^
main.cpp:4:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'E' to 'X &&' for 1st argument
struct X { };
       ^
1 error generated.
